# freeCodeCamp

./: .dockerignore  .gitignore  .gitpod.yml  .prettierignore  CLAIMABLE_CERTS_IMPLEMENTATION.md  Dockerfile.vsweb  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
api/: package.json
api-server/: package-lock.json  package.json
api/prisma/: schema.prisma
api/src/: app.ts
api/src/plugins/: error-handling.ts
client/: .babelrc.js  package-lock.json  package.json
client/src/client/: frame-runner.ts
client/src/client-only-routes/: freecodecamp-os.tsx
client/src/pages/: fcc-os.tsx  index.tsx  learn.tsx
client/src/redux/: action-types.js  actions.js  freecodecamp-os-saga.js  index.js  selectors.js
client/src/resources/: cert-and-project-map.ts
client/utils/: build-challenges.js
config/: certification-settings.ts  challenge-types.ts  superblocks.ts
curriculum/: capi-connector.js  diff.js  get-challenges.js  package-lock.json  package.json  utils.js
curriculum/schema/: challenge-schema.js
curriculum/test/: test-challenges.js
docker/exam-moderation-service/: Dockerfile
dolt/: mysql.js
dolt/api/: index.js  package-lock.json  package.json
dolt/queries/: drop.sql
patches/: @codesandbox__sandpack-react.patch
shared/config/: challenge-types.ts  superblocks.ts
tools/exam-moderation-service/: Cargo.toml  README.md  sample.env
tools/exam-moderation-service/src/: db.rs  lib.rs  main.rs  prisma.rs
tools/exam-moderation-service/tests/: moderate.rs
tools/ui-components/: package.json
(+61 files in other folders)
