[package]
name = "exam-moderation-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
dotenvy_macro = "0.15.7"
futures-util = "0.3.31"
mongodb = "3.2.3"
sentry = { version = "0.37.0", features = ["tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
